--- a/index.html
+++ b/index.html
@@ -1,38 +1,31 @@
 <!DOCTYPE html>
 <html>
+<meta charset="utf-8" />
 <head>
-
-<script src=" https://unpkg.com/leaflet@1.6.0/dist/leaflet.js "></script>
-<link rel="stylesheet" href=" https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
-
+<link rel="stylesheet"
+href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
+<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
 <style>
-
 #map {
 width: 100%;
-height: 580px;
+height: 600px;
 box-shadow: 5px 5px 5px #888;
 }
-
 </style>
 </head>
 <body>
-<div id = 'map'>
-</div>
-
+<div id="map"></div>
 <script>
-var osm = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution: 
-'&copy; <a href="http://osm.org/copyright">OpenStreetMap</a>'
-+ 'contributors', 
-maxZoom: 18
+var osm = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a>'
++ 'contributors', maxZoom: 18
 });
 var map = L.map('map', {
-center: [1.614433, -75.609455],
-zoom: 15,
-layers: OMS,
-
+center: [41.66, -4.72],
+zoom: 13,
+layers: osm,
+scrollWheelZoom: false,
 });
 L.control.scale().addTo(map);
 </script>
-
 </body>
 </html>
